css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap');

html {
    /* decllaring some colors UwU */
    --psYellow: #FFBE51;
    --psbgGray:  #E5E5E5;
    --psGray: #757575;
    --psDetailsGray: #C4C4C4;
    /* -------------------------- */

    font-family: 'Nunito', sans-serif;
}

* {
    box-sizing: border-box;
}

.sr-only{
    position: absolute;
    height: 1px;
    width: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip-path: rect(0,0,0,0);
    white-space: nowrap;
    border-width: 0;
}

body {
    margin: 0%;
    top: 0;
    min-height: 100vh;
    position: relative;
}

.content, .container {
    margin: 5rem 10vw 0 10vw;
    padding-bottom: 20rem;
}


a {
    text-decoration: none;
    color: #757575;
}

header {
    background-color: var(--psYellow);
    height: fit-content;
    min-height: 7rem;
    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.25);
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding: 0 min(7.5rem, 10vw);
}

header > div {
    margin-right: auto;
}

header > nav {
    margin-left: auto;
}

header nav {
    display: flex;
    flex-wrap: wrap;
}

header nav a{
    font-size: 1.25rem;
    color: white;
    padding-left: 4.3rem;
}



.content .banner, .content .lowerSection {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
}

.content .banner h3 {
    width: 50%;
    color: var(--psGray);
    font-size: 2.5rem;
    text-transform: uppercase;
}

.content .servicos {
    background-color: var(--psbgGray);

    margin: 5rem -10vw;
    padding: 0 10vw;
}

.content .servicos > h2 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: 400;
    padding-top: 6.25rem;
    margin: 0;
    text-transform: uppercase;
    margin-bottom: 5rem;
}

.content .servicos .servicosDisplay {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.content .servicos .servicosDisplay .servicoVert {
    display: flex;
    flex-direction: column;
    width: 16.6rem;
    margin-bottom: 6.25rem;
}

.imgServico {
    width: 100%;
    height: 0;
    padding-top: 50%;
    padding-bottom: 50%;
    display: flex;
}

.imgServico.white {
    background-color: white;
}

.imgServico.gray {
    background-color: #b1b1b1;
}

.imgServico img {
    max-width: 100%;
    height: fit-content;
    align-self: center;
}

.square {
    width: 16.6rem;
}

.content .servicos .servicosDisplay .servicoVert h2 {
    font-size: 1.5rem;
    font-weight: 700;
    margin-top: 1rem;
    margin-bottom: 0;
}

.content .servicos .servicosDisplay .servicoVert h3 {
    font-size: 1.5rem;
    font-weight: 400;
    margin: 0%;
}

.content .lowerSection h3 {
    color: var(--psGray);
    font-weight: 700;
}

.content .lowerSection p {
    color: var(--psGray);
    font-weight: 400;
}

.content .lowerSection div {
    width: 50%;
}

footer {
    position: absolute;
    width: 100%;
    bottom: 0;
}

footer .footer {
    background-color: var(--psYellow);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10vw;
}

footer .footerContent {
    display: flex;
    align-items: center;
}

.footerContent ul {
    list-style: none;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 1rem;
    padding: 0;
    height: fit-content;
}

footer .copyright {
    height: 3.5rem;
    background-color: var(--psDetailsGray);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

footer .copyright > h2 {
    text-align: center;
    margin: 0;
    font-size: 1rem;
    font-weight: 400;
}

/* SERVIÇOS */

.content h2.servicosTitle {
    color: var(--psYellow);
    text-transform: uppercase;
    text-align: center;
    font-size: 2.5rem;
}

.content .servicoList {
    display: flex;
    flex-direction: column;
    margin: 6rem 0;
}

.content .servicoList .line {
    width: 100%;
    height: 5px;
    background-color: var(--psDetailsGray);
    margin: 5rem 0;
}

.content .servicoList .servicoHor {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.content .servicoList .servicoHor .square {
    margin-right: 4rem;
}

.content .servicoList .servicoHor .listingContentHor {
    display: flex;
    flex-direction: column;
    width: 45rem;
    max-width: 70%;
    justify-content: flex-end;
}

.content .servicoList .servicoHor .listingContentHor ul {
    list-style: none;
    margin: 0;
    padding: 0;

}
.content .servicoList .servicoHor .listingContentHor ul li:first-of-type {
    display: flex;
    flex-wrap: wrap;
}

.content .servicoList .servicoHor .listingContentHor ul h2{
    margin: 0;
    font-family: 'Nunito', sans-serif;
    font-weight: 700;
    font-size: 2.5rem;
    text-transform: uppercase;
    padding-right: 1rem;
}

.content .servicoList .servicoHor .listingContentHor ul h3{
    margin: 0;
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 2rem;
    text-transform: uppercase;
    line-height: 54px;
}

.content .servicoList .servicoHor .listingContentHor ul p{
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 1.15rem;
    color: var(--psGray);
}

.content .servicoList .servicoHor .listingContentHor button {
    width: 15rem;
    padding: 0.5rem 0;
    justify-self: flex-end;
}

button {
        padding: 1rem 2rem;
        background-color: var(--psYellow);
        color: white;
        border: 0;
        font-weight: 700;
        transition: 0.2s;
}

button:hover {
    background-color: #FFaa00;
}

button:active {
    background-color: #ffda9a;
    transition: 0.05s;
}

/* -------- */

/* CONTATO */

.content.contato {
    padding-bottom: 5rem;
}

.content.contato button {
    width: 100%;
    text-transform: lowercase;
    padding: 0.5rem 0;
}

.content.contato form {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.content.contato form input, .content.contato form textarea {
    padding: 0.5rem 1rem;
    width: 100%;
    margin: 1rem 0;
}

.content.contato form textarea {
    height: 12rem;
}

.content.contato h2 {
    color: var(--psYellow);
    text-transform: uppercase;
    font-size: 2.5rem;
}

.content.contato div {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.content.contato div > *{
    width: 42rem;
    min-width: 32%;
    max-width: 90vw;
}

/* ------- */


/* LOGIN / REGISTER */

.content.register, .content.login {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.form-div {
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
    padding: 3.5rem;
    width: 25.5rem;
    display: flex;
    flex-direction: column;
}

.form-div h2 {
    color: var(--psYellow);
    text-transform: uppercase;
    font-size: 2.5rem;
    text-align: center;
}

.form-div form {
    padding: 0 1.5rem;
}

.form-div form input{
    margin: 0.4rem 0 !important;
}

.form-div form button {
    width: 100%;
    text-transform: lowercase;
    margin-top: 0.5rem;
    margin-bottom: 0.3rem;
    padding: 0.5rem;
}

.form-div a {
    font-size: 1rem;
    text-align: center;
    font-weight: 700;
    color: black;
}

/* ---------------- */


/* FORM UHUUUUUUUUUUUUUU */

form input:not([type="checkbox"]), form textarea, form select {
    width: 100%;
    padding: 5px;
    margin: 5px 0 20px;
    resize: none;
}

form input:not([type="checkbox"], [type="file"]):focus,
form textarea:focus,
form select:focus {
    background-color: #fff5d5;
}

form input:not([type="checkbox"], [type="file"]):focus-visible,
form textarea:focus-visible,
form select:focus-visible {
    outline-color: var(--psYellow);
}

form button {
    padding: 15px 30px;
    text-transform: uppercase;
    background-color: var(--psYellow);
    color: white;
    border: 0;
    font-weight: 700;
    transition: 0.5s;
    
}

form button:hover {
    background-color: #FFaa00;
}

form button:active {
    background-color: #f5e1ba;
}

form .check {
    margin: 5px 0;
}

form .check:last-of-type {
    margin-bottom: 30px;
}

/* ---------------------- */

